Fix watch icon visibility

--- a/src/components/screens/monitor/delegates/delegates.css
+++ b/src/components/screens/monitor/delegates/delegates.css
@@ -109,11 +109,20 @@
     & > .delegateColumn {
       display: flex;
 
-      & > img {
-        margin-right: 12px;
-        visibility: hidden;
-        opacity: 0;
-        position: relative;
+      & > .eyeIcon {
+        &.watchedDelegate {
+          & > img {
+            visibility: visible !important;
+            opacity: 1 !important;
+          }
+        }
+
+        & > img {
+          margin-right: 12px;
+          visibility: hidden;
+          opacity: 0;
+          position: relative;
+        }
       }
     }
   }
@@ -128,7 +137,7 @@
   }
 
   &:hover {
-    & > span > .delegateColumn > img {
+    & > span > .delegateColumn > .eyeIcon > img {
       visibility: visible;
       opacity: 1;
     }
